--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,8 @@
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
       <script src="{{ site.baseurl }}/assets/js/respond.min.js"></script>
     <![endif]-->
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102484926-9"></script>
@@ -71,5 +73,16 @@
          }
       </script>
     {% endif %}
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on("init", user => {
+          if (!user) {
+            window.netlifyIdentity.on("login", () => {
+              document.location.href = "/admin/";
+            });
+          }
+        });
+      }
+    </script>
     </body>
 </html>
