Add menu ordering the loops to draw the menu are a bit wonky, and french ordering doesn't work yet

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,13 +3,14 @@
   <a class="skip-link visuallyhidden focusable" href="#main">Skip to Main Content</a>
   <nav class="sidebar-nav" role="navigation">
     <ul>
-      {% for menu in site.data.menu[page.lang] %}
-          <li><a href="{{ site.baseurl }}{{ menu[1].url }}">{{ menu[1].name }}</a></li>
-      {% endfor %}
-    </ul>
-    <ul>
-      {% for navPage in site[page.lang] %}
-        <li><a href="{{ site.baseurl }}{{ navPage.url }}">{{ navPage.title }}</a></li>
+      {% for navPage in site.menu %}
+        {% for item in navPage.menuItems %}
+          {% for sitePage in site[page.lang] %}
+            {% if sitePage.title == item.menuItem %}
+              <li><a href="{{ site.baseurl }}{{ sitePage.url }}">{{ sitePage.title }}</a></li>
+            {% endif %}
+          {% endfor %}
+        {% endfor %}
       {% endfor %}
     </ul>
   </nav>
