add in sub-pages

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,20 @@
         {% for item in navPage.menuItems %}
           {% for sitePage in site[page.lang] %}
             {% if sitePage.title == item.menuItem or  sitePage.trans_url == item.menuItem %}
-              <li><a href="{{ site.baseurl }}{{ sitePage.url }}">{{ sitePage.title }}</a></li>
+              <li>
+                <a href="{{ site.baseurl }}{{ sitePage.url }}">{{ sitePage.title }}</a>
+                {% if sitePage.childPages %}
+                  <ul class="sub-menu">
+                    {% for childPage in sitePage.childPages %}
+                      {% for childrenPage in site[page.lang] %}
+                        {% if childrenPage.title == childPage or sitePage.trans_url == childPage %}
+                          <li class="sub-link"><a  href="{{ site.baseurl }}{{ childrenPage.url }}">{{ childrenPage.title }}</a></li>
+                        {% endif %}
+                      {% endfor %}
+                    {% endfor %}
+                  </ul>
+                {% endif %}
+              </li>
             {% endif %}
           {% endfor %}
         {% endfor %}
