--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -227,6 +227,11 @@ Navigation
   border-bottom: none;
 }
 
+.sub-link {
+    padding-left: 30px !important;
+    font-size: 1em !important;
+}
+
 
 /*
 Layout
